--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -8,6 +8,7 @@
 }
 .NavBar{
     background-color: var(--background);
+    height: 7.5vh;
     color: var(--color);
     display: flex;
     justify-content: space-between;
